--- a/.github/workflows/snyk-test.yaml
+++ b/.github/workflows/snyk-test.yaml
@@ -8,7 +8,6 @@ on:
     branches: [ master ]
 
 env:
-  SNYK_API: https://app.eu.snyk.io/api
   IMAGE_NAME: nodejs-goof
   
 jobs:
@@ -18,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x]
+        node-version: [18.x]
     continue-on-error: true
     steps:
       - uses: actions/checkout@v2
